Bakgrunn på accordion headers

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -2,10 +2,8 @@
 
 <header class="relative z-50 bg-white" x-bind:class="(menuOpen || notifyOpen || loginOpen) && 'shadow-lg'" 
 >
-  <div class="text-sm tracking-widest text-center uppercase border-b border-slate-200 sm:hidden px-edge">
-    <div class="py-1">
-      {{ activeRole }}
-    </div>
+  <div class="text-sm text-center border-b border-slate-200 sm:hidden px-edge">
+    <button class="py-1 tracking-widest uppercase cursor-default" x-on:click="menuOpen = !menuOpen, notifyOpen = false, loginOpen = false" type="button">{{ activeRole }}</button>
   </div>
 
   <nav class="z-10 grid grid-left-1 lg:grid-cols-left-2">
@@ -21,14 +19,16 @@
 
       {# Audience #}
       <div class="self-center hidden pl-5 ml-2 text-lg leading-tight border-l sm:block border-slate-300">
-        {{ activeRole }}
+        <button class="cursor-default" x-on:click="menuOpen = !menuOpen, notifyOpen = false, loginOpen = false" type="button">
+          {{ activeRole }}
+        </button>
       </div>
 
 
       {# Menu Buttons #}
-      {%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-2 pr-3 leading-none font-semibold gap-1 text-blue-500 rounded min-w-16 py-2 text-sm xs:text-base fine:hover:bg-slate-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
+      {%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-2 pr-3 leading-none font-semibold gap-1 text-blue-500 rounded min-w-16 py-2 text-sm xs:text-base fine:hover:bg-blue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
 
-      <div class="flex self-center sm:gap-1 py-2 justify-self-end xs:-mr-2.5">
+      <div class="flex self-center py-2 sm:gap-1 justify-self-end xs:-mr-3">
         <button class="{{ menuButtonClasses }}" x-show="!loggedIn" x-on:click="loginOpen = !loginOpen, menuOpen = false" x-bind:aria-expanded="loginOpen">
             {{ '/src/_includes/svg/icons/login.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
           <span class="mt-px">Logg inn</span>
@@ -43,7 +43,7 @@
           <span class="hidden mt-px sm:inline-block">Isac Norland</span>
         </button>
 
-        <button class="{{ menuButtonClasses }} ml-1 order-2" type="button" x-on:click="menuOpen = !menuOpen, notifyOpen = false, loginOpen = false" x-bind:class="menuOpen && 'bg-slate-200'" x-bind:aria-expanded="menuOpen">
+        <button class="{{ menuButtonClasses }} ml-1 order-2" type="button" x-on:click="menuOpen = !menuOpen, notifyOpen = false, loginOpen = false" x-bind:class="menuOpen && 'bg-blue-50'" x-bind:aria-expanded="menuOpen">
           <template x-if="!menuOpen">
             {{ '/src/_includes/svg/icons/menusearch.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
           </template>
