--- a/src/pages/produkt/pleiepenger/pleiepenger.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger.njk
@@ -64,17 +64,20 @@ permalink: 'produkt/pleiepenger/index.html'
           </div>
 
           <h2 class="mt-4 font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+          <p>{{ chapter.data.ingress | safe }}</p>
+
 
           {# Chapter TOC #}
           {% if chapter.templateContent %}
-          <nav class="rounded-lg lg:hidden toc bg-slate-100">
-            <h3 class="px-4 pt-3 font-semibold">I dette kapittelet</h3>
-            <ul class="grid gap-2 py-2">
+          <nav class="mt-8 lg:hidden">
+            <h3 class="font-semibold">I dette kapittelet</h3>
+            <ul class="grid gap-px py-1">
               {% for item in chapter.templateContent | tocData %}
               <li>
-                <a class="flex items-center gap-1 px-3 py-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
-                  {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('-translate-y-px opacity-85') | safe }}
+                <a class="flex items-end gap-2 py-1 pl-4 text-blue-500 border-l-4 border-slate-200 hover:border-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
                   {{ item.text }}
+                  <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span>
+                  {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-7 h-7 p-1 bg-slate-100 group-hover:bg-white rounded-full shrink-0') | safe }}
                 </a>
               </li>
               {% endfor %}
@@ -84,7 +87,6 @@ permalink: 'produkt/pleiepenger/index.html'
 
           {# Main Content #}
           <div class="mt-8 prose col-main">
-            <p>{{ chapter.data.ingress | safe }}</p>
             {{ chapter.templateContent | markdown | safe }}
           </div>
         </section>
@@ -92,32 +94,36 @@ permalink: 'produkt/pleiepenger/index.html'
       </div>
 
       {# Chapter TOC #}
-      <nav class="hidden col-side lg:block">
-        <ol class="toc toc--multilevel toc--sticky lg:mt-[26.5em] lg:sticky lg:-translate-y-4 lg:top-8">
-          {% for chapter in chapters %}
-          <li class="py-1.5">
-            <a class="font-semibold" href="#{{ chapter.data.title | slugify }}">
-              {{ loop.index }}. {{ chapter.data.title }}
-            </a>
-            
-            {# {{ chapter.templateContent | toc | safe }} #}
-            {% if chapter.templateContent %}
-            <ul class="grid gap-1 mb-3 lg:mb-6" x-show="showChapter{{ loop.index }}">
-              {% for item in chapter.templateContent | tocData %}
-              <li class="toc-highlight">
-                <a class="flex items-start gap-1 px-2 py-2 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
-                  {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('-translate-y-px opacity-85 shrink-0') | safe }}
-                  {{ item.text }}
-                </a>
-              </li>
-              {% endfor %}
-            </ul>
-            {% endif %}
-          </li>
-          {% endfor %}
-        </ol>
-      </nav>
-
+      <div class="hidden col-side lg:block">
+        <nav class="lg:mt-[26.5em] lg:sticky lg:-translate-y-4 lg:top-8">
+          <ol class="grid gap-2 toc toc--multi toc--sticky">
+            {% for chapter in chapters %}
+            <li>
+              <a class="flex items-end gap-1 py-1 font-semibold underline hover:no-underline decoration-blue-500" href="#{{ chapter.data.title | slugify }}">
+                <span>{{ chapter.data.title }}</span>
+                <span class="flex-1 h-px min-w-4 -translate-y-[0.375em] bg-dotted-x" aria-hidden="true"></span>
+                {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-7 h-7 p-1 rounded-full group-hover:bg-blue-500 group-hover:text-white') | safe }}
+              </a>
+              
+              {# {{ chapter.templateContent | toc | safe }} #}
+              {% if chapter.templateContent %}
+              <ul class="grid gap-2 py-1 pl-3 mb-4 opacity-90" x-show="showChapter{{ loop.index }}">
+                {% for item in chapter.templateContent | tocData %}
+                <li>
+                  <a class="flex items-end gap-1 py-1 decoration-blue-500 group text-base/snug hover:underline toc-highlight-pill" href="#{{ item.id }}">
+                    <span class="w-max">{{ item.text }}</span>
+                    {# <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span>
+                    {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-7 h-7 p-1 rounded-full group-hover:bg-blue-500 group-hover:text-white') | safe }} #}
+                  </a>
+                </li>
+                {% endfor %}
+              </ul>
+              {% endif %}
+            </li>
+            {% endfor %}
+          </ol>
+        </nav>
+      </div>
     </div>
 
     <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
@@ -130,17 +136,17 @@ permalink: 'produkt/pleiepenger/index.html'
     const headings = document.querySelectorAll('.prose h3');
     const headingsArr = Array.from(headings);
 
-    const navItems = document.querySelectorAll('.toc--sticky .toc-highlight');
+    const navItems = document.querySelectorAll('.toc--sticky li');
 
     function activateNavByIndex(index) {
-      if (headings[index].classList.contains('toc-highlight--active'))
+      if (headings[index].classList.contains('active'))
         return;
 
-      const currentActive = document.querySelectorAll('.toc-highlight--active');
+      const currentActive = document.querySelectorAll('.active');
       for (let i = currentActive.length - 1; i >= 0; i--) {
-        currentActive[i].classList.remove('toc-highlight--active');
+        currentActive[i].classList.remove('active');
       }
-      navItems[index].classList.add('toc-highlight--active');
+      navItems[index].classList.add('active');
     }
 
     const intersectionCallback = (entries, observer) => {
