--- a/src/_includes/partials/fonts.njk
+++ b/src/_includes/partials/fonts.njk
@@ -79,7 +79,18 @@
 
   @font-face {
     font-family: "Source Sans 3";
-    font-weight: 675;
+    font-weight: 625;
+    font-style: normal;
+    font-display: swap;
+    src: url("{{ '/assets/fonts/SourceSans3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+      U+2215, U+FEFF, U+FFFD;
+  }
+
+  @font-face {
+    font-family: "Source Sans 3";
+    font-weight: 650;
     font-style: normal;
     font-display: swap;
     src: url("{{ '/assets/fonts/SourceSans3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
