--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -34,30 +34,30 @@
 }
 
 @layer components {
-  :where(.prose, .accordion, .expander) > *:not(summary) + * {
+  :where(.prose, .accordion, .expander) > *:not(summary, h3) + * {
     margin-block-start: 1.5em;
   }
   .prose > :where(h1, h2, h3, h4, h5) {
-    @apply text-gray-900 text-pretty font-semibold;
+    text-wrap: pretty;
+    font-weight: 600;
+    color: theme(colors.gray.900);
+    margin-block: 1.25em 0.375em;
   }
-  :where(.prose, .accordion, .expander) h3 {
+  :is(.prose, .accordion, .expander) h3 {
     font-size: var(--step-2);
     line-height: 1.2;
     letter-spacing: -0.0125em;
-    margin-block: 1.25em 0.25em;
   }
-  :where(.prose, .accordion, .expander) > h4 {
+  :is(.prose, .accordion, .expander) > h4 {
     font-size: var(--step-1);
     line-height: 1.2;
     letter-spacing: -0.0125em;
-    margin-block: 1.375em 0.25em;
   }
-  :where(.prose, .accordion, .expander) > h5 {
+  :is(.prose, .accordion, .expander) > h5 {
       font-size: var(--step-0);
+      font-weight: 650;
       line-height: 1.3;
-      letter-spacing: 0.025em;
-      text-transform: uppercase;
-      margin-block: 1.25em 0.25em;
+      margin-block-end: 0.25em;
   }
   :where(.prose, .accordion, .expander) > :where(h3, h4, h5) + *:not(h3, h4, h5, ul, ol, details) {
     margin-block-start: 0.25em;
@@ -112,6 +112,12 @@
     @apply lg:border-blue-600;
   }
 
+  .toc-highlight-pill {
+    @apply rounded-full;
+  }
+  .toc-highlight-pill--active {
+    @apply lg:bg-blue-50;
+  }
 
 
 
@@ -119,15 +125,18 @@
   /* Accordion */
   .accordion details {
     display: grid;
-    padding-inline: 36px 10px;
+    padding-inline: 40px 10px;
     font-family: theme(fontFamily.sans);
   }
   .accordion details + details {
-    margin-block-start: 0;
-    border-top: 1px solid theme(colors.gray.200);
+    margin-block-start: 0.25rem;
+    /* border-top: 1px solid theme(colors.gray.200); */
   }
   .accordion details[open] {
     padding-block-end: 36px;
+  }
+  :where(.accordion) summary::-webkit-details-marker {
+    display: none;
   }
   :where(.accordion) summary {
     appearance: none;
@@ -135,19 +144,23 @@
     list-style: none;
     padding: 0.625em 40px;
     margin-block: -1px;
-    margin-inline: -48px -20px;
+    margin-inline: -40px -10px;
     border-radius: 4px;
     cursor: pointer;
     text-align: left;
-    text-indent: -30px;
+    text-indent: -31px;
     text-wrap: pretty;
     font-weight: 400;
     line-height: 1.375;
     text-size: theme(fontSize.lg);
-    color: theme(colors.blue.600);
+    background-color: theme(colors.slate.100);
+    color: theme(colors.blue.700);
   }
-  :where(.accordion) summary::-webkit-details-marker {
-    display: none;
+  .accordion details:first-child summary {
+    border-radius: 8px 8px 4px 4px;
+  }
+  .accordion details:last-child summary {
+    border-radius: 4px 4px 8px 8px;
   }
   :where(.accordion) details[open] summary {
     background-color: theme(colors.slate.100);
@@ -159,8 +172,8 @@
     color: theme(colors.blue.700);
   }
   :where(.accordion) summary:before {
-    background-color: theme(colors.blue.50);
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 86, 180, 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
+    background-color: theme(colors.blue.500);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(255 255 255 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-position: center;
     background-repeat: no-repeat;
     content: "";
@@ -168,27 +181,24 @@
     flex-shrink: 0;
     place-items: center;
     translate: 0 4px;
-    margin-inline-end: 10px;
-    border-radius: 8px;
+    margin-inline-end: 9px;
+    border-radius: 9px;
     transition: rotate 150ms;
     width: 22px;
     height: 22px;
   }
   :where(.accordion) summary:hover:before {
-    background-color: theme(colors.white);
+    background-color: theme(colors.blue.700);
   }
   :where(.accordion) details[open] summary:before {
     background-color: theme(colors.white);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(0 86 180 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     rotate: -180deg;
   }
   :where(.accordion) summary > * {
     text-wrap: pretty;
   }
-  [data-theme="sykepenger"] .accordion {
-    border-radius: theme(borderRadius.lg);
-    border: 1px solid theme(colors.slate.200);
-  }
-  [data-theme="sykepenger"] details {
+  [data-theme="sykepenger"] :where(.accordion) details {
     padding-inline: 42px;
   }
   [data-theme="sykepenger"] :where(.accordion) summary {
@@ -345,5 +355,12 @@
   }
   .bg-dotted-x {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='5' height='1' fill='none' viewBox='0 0 5 1'%3E%3Ccircle cx='.5' cy='.5' r='.5' fill='%23555'/%3E%3C/svg%3E");
+  }
+
+  .flip-y {
+    transform: rotateX(-180deg);
+  }
+  .flip-x {
+    transform: rotateY(-180deg);
   }
 }
