--- a/src/_includes/partials/minSide.njk
+++ b/src/_includes/partials/minSide.njk
@@ -1,21 +1,19 @@
 {# Notifications #}
 <div class="absolute inset-x-0 z-40 grid w-full h-0 grid-left-1 lg:grid-cols-left-2 top-full " x-bind:class="notifyOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
-  <div class="lg:max-w-xl w-full bg-white rounded-b-lg shadow-lg border border-slate-200 md:max-h-[92vh] col-full sm:col-wide lg:justify-self-end lg:-mx-4">
-    <div class="px-6 px-clamp-gap">
-      <p class="grid pt-5 pb-4" x-on:click="newNotifications = !newNotifications">
-        <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
-        <span class="text-xl font-semibold">Isac Norland</span>
-      </p>
-      <p class="border-t border-slate-200">
-        <a href="#" class="flex items-center gap-2 py-3 -mt-px text-blue-500 -mx-clamp-gap px-clamp-gap sm:-mx-6 sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
-          {{ '/src/_includes/svg/icons/user.svg' | svgContents() | safe }}
-          <span>Min side</span>
-        </a>
-      </p>
-    </div>
+  <div class="sm:max-w-xl w-full bg-white rounded-b-lg shadow-lg border border-slate-200 md:max-h-[92vh] col-full sm:col-wide sm:justify-self-end">
+    <p class="grid pt-5 pb-4 border-b mx-edge sm:mx-6 border-slate-200" x-on:click="newNotifications = !newNotifications">
+      <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
+      <span class="text-xl font-semibold">Isac Norland</span>
+    </p>
+    <p>
+      <a href="#" class="flex items-center gap-2 py-3 -mt-px text-blue-500 px-edge sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
+        {{ '/src/_includes/svg/icons/user.svg' | svgContents() | safe }}
+        <span>Min side</span>
+      </a>
+    </p>
     <div class="bg-slate-100 border-b relative border-slate-200 border-t max-h-[55dvh] overflow-y-auto overscroll-contain fancy-scroll" x-show="newNotifications">
       <div class="sticky inset-x-0 top-0 h-3 -mb-3 bg-gradient-to-b from-slate-100 to-transparent mix-blend-multiply"></div>
-      <div class="p-6 py-4 px-clamp-gap">
+      <div class="py-4 sm:p-6 px-edge">
         <h2 class="text-lg font-semibold">Varsler</h2>
         <h3 class="mt-3 text-sm tracking-wider uppercase opacity-80">Oppgaver</h3>
         <div class="grid gap-1 mt-2">
@@ -68,7 +66,7 @@
     </div>
     <div class="grid">
       <div x-show="!newNotifications" class="border-t border-slate-200 mx-clamp-gap sm:mx-6"></div>
-      <button class="flex items-center gap-2 px-6 py-3 text-blue-500 rounded-b-lg px-clamp-gap fine:hover:bg-blue-500 fine:hover:text-white" x-on:click="loggedIn = false, notifyOpen = false">
+      <button class="flex items-center gap-2 py-3 text-blue-500 rounded-b-lg px-edge sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white" x-on:click="loggedIn = false, notifyOpen = false">
         {{ '/src/_includes/svg/icons/logout.svg' | svgContents() | safe }}
         <span>Logg ut</span>
       </button>
