--- a/src/pages/produkt/alderspensjon/alderspensjon.njk
+++ b/src/pages/produkt/alderspensjon/alderspensjon.njk
@@ -56,247 +56,7 @@ permalink: 'produkt/alderspensjon/index.html'
       {% set chapterIndex = loop.index %}
       <section class="grid grid-flow-row-dense col-full grid-cols-center " id="{{ chapter.data.title | slugify }}" x-data="{ tocOpen: false }">
         <div class="col-wide">
-          <svg class="w-full h-auto" xmlns="http://www.w3.org/2000/svg" width="768" height="420" fill="none" viewBox="0 0 768 420">
-            <path stroke="#CCC" stroke-linecap="round" stroke-width="3" d="m64 381 118.88-118.88a3 3 0 0 1 4.24 0l65.76 65.76a3 3 0 0 0 4.24 0l194.76-194.76a3 3 0 0 1 4.24 0L704 381"/>
-            <circle cx="253" cy="63" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="71" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="191" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="253" cy="199" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="63" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="71" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="191" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="261" cy="199" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="71" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="63" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="191" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="269" cy="199" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="71" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="277" cy="191" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="71" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="285" cy="191" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="293" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="301" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="309" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="317" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="317" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="317" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="317" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="317" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="317" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="63" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="71" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="191" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="245" cy="199" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="71" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="63" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="191" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="237" cy="199" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="71" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="229" cy="191" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="71" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="221" cy="191" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="79" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="213" cy="183" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="87" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="205" cy="175" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="95" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="103" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="159" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="197" cy="167" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="189" cy="111" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="189" cy="119" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="189" cy="127" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="189" cy="135" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="189" cy="143" r="1" fill="#AAA" stroke="#AAA"/>
-            <circle cx="189" cy="151" r="1" fill="#AAA" stroke="#AAA"/>
-          </svg>
+          {{ '/src/_includes/svg/placeholder.svg' | svgContents('w-full h-auto max-w-screen-md mx-auto') | safe }}
         </div>
         <div class="col-main">
           <h2 class="mt-8 mb-3 font-bold text-3xl/tight text-balance ">{{ chapter.data.title }}</h2>
