--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -6,7 +6,7 @@
     <button class="py-1 tracking-widest uppercase cursor-default" x-on:click="menuOpen = !menuOpen, notifyOpen = false, loginOpen = false" type="button">{{ activeRole }}</button>
   </div>
 
-  <nav class="z-10 grid grid-left-1 lg:grid-cols-left-2">
+  <nav class="z-10 grid grid-cols-left-1 lg:grid-cols-left-2">
     <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] col-wide">
 
       {# Logo #}
