--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -9,15 +9,15 @@ permalink: '/omrade/arbeid/index.html'
 
 {%- block content -%}
   <main class="bg-slate-100">
-    <div class="grid pt-12 bg-white grid-left-1 lg:grid-cols-left-2 ">
-      <div class="relative col-wide">
-        {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-32 mt-5 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
+    <div class="grid pt-12 bg-white grid-cols-center">
+      <div class="relative col-main">
+        {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-32 mt-5 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
         <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
         <h1 class="mt-0.5 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
         <h2 class="col-span-2 col-start-1 mt-2 mb-8 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
       </div>
     </div>
-    <div class="grid grid-flow-row-dense pt-8 pb-16 grid-left-1 lg:grid-cols-left-2">
+    <div class="grid grid-flow-row-dense pt-8 pb-16 grid-cols-center">
       <div class="mb-12 col-wide lg:col-side">
         <a class="block px-5 py-4 font-semibold leading-snug text-blue-600 underline bg-red-100 rounded-lg hover:text-blue-500 hover:no-underline" href="#">Finn ledige stillinger på arbeidsplassen.no</a>        
       </div>
