--- a/src/pages/produkt/pleiepenger/pleiepenger-a.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-a.njk
@@ -14,7 +14,7 @@ permalink: 'produkt/pleiepenger/a/index.html'
 
   {% set chapters = collections.all| onlyTags('pleiepenger', 'innhold') | sort(false, false, 'data.order') %}
 
-  <main class="grid py-16 grid-left-1 lg:grid-cols-left-2">
+  <main class="grid py-16 grid-cols-left-1 lg:grid-cols-left-2">
     <div class="col-main lg:col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
       <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
@@ -56,11 +56,11 @@ permalink: 'produkt/pleiepenger/a/index.html'
     {% for chapter in chapters | sort(false, false, 'data.order') %}
       {% set chapterIndex = loop.index %}
       <section 
-        class="grid items-end pt-12 col-full grid-left-1 lg:grid-cols-left-2" 
+        class="grid items-end pt-12 col-full grid-cols-left-1 lg:grid-cols-left-2" 
         id="{{ chapter.data.title | slugify }}" 
         x-data="{ tocShown: false, tocOpen: false }"
       >
-        <div class="grid grid-left-1 lg:grid-cols-left-2 col-full">
+        <div class="grid grid-cols-left-1 lg:grid-cols-left-2 col-full">
           {# <div class="rounded-lg aspect-[2/1] border border-slate-300 mb-sm"></div> #}
           <div class="text-[360px]/[0.8] -translate-x-2 font-black text-slate-200 pt-2xl">{{ loop.index }}</div>
 
