--- a/src/_includes/partials/fonts.njk
+++ b/src/_includes/partials/fonts.njk
@@ -1,7 +1,7 @@
 <style>
   @font-face {
     font-family: "Source Serif 4";
-    font-weight: 400;
+    font-weight: 100 900;
     font-style: normal;
     font-display: swap;
     src: url("{{ '/assets/fonts/SourceSerif4-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
@@ -12,7 +12,7 @@
 
   @font-face {
     font-family: "Source Serif 4";
-    font-weight: 600;
+    font-weight: 100 900;
     font-style: italic;
     font-display: swap;
     src: url("{{ '/assets/fonts/SourceSerif4-italic-latin.woff2' | htmlBaseUrl }}") format("woff2");
@@ -22,20 +22,8 @@
   }
 
   @font-face {
-    font-family: "Source Serif 4";
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-    src: url("{{ '/assets/fonts/SourceSerif4-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
-  }
-
-
-  @font-face {
     font-family: "Source Sans 3";
-    font-weight: 375;
+    font-weight: 100 900;
     font-style: normal;
     font-display: swap;
     src: url("{{ '/assets/fonts/SourceSans3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
@@ -46,7 +34,7 @@
 
   @font-face {
     font-family: "Source Sans 3";
-    font-weight: 375;
+    font-weight: 100 900;
     font-style: italic;
     font-display: swap;
     src: url("{{ '/assets/fonts/SourceSans3-italic-latin.woff2' | htmlBaseUrl }}") format("woff2");
@@ -56,57 +44,37 @@
   }
 
   @font-face {
-    font-family: "Source Sans 3";
-    font-weight: 400;
+    font-family: 'Lexend';
     font-style: normal;
+    font-weight: 100 900;
     font-display: swap;
-    src: url("{{ '/assets/fonts/SourceSans3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
+    src: url("{{ '/assets/fonts/Lexend-latin.woff2' | htmlBaseUrl }}") format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
+      U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
+      U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
   @font-face {
-    font-family: "Source Sans 3";
-    font-weight: 600;
-    font-style: normal;
+    font-family: 'Noto Sans';
+    font-style: italic;
+    font-weight: 100 900;
+    font-stretch: 62.5% 100%;
     font-display: swap;
-    src: url("{{ '/assets/fonts/SourceSans3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
+    src: url("{{ '/assets/fonts/NotoSans-italic-latin.woff2' | htmlBaseUrl }}") format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
+      U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, 
+      U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
-
+  
   @font-face {
-    font-family: "Source Sans 3";
-    font-weight: 625;
+    font-family: 'Noto Sans';
     font-style: normal;
+    font-weight: 100 900;
+    font-stretch: 62.5% 100%;
     font-display: swap;
-    src: url("{{ '/assets/fonts/SourceSans3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
-  }
-
-  @font-face {
-    font-family: "Source Sans 3";
-    font-weight: 650;
-    font-style: normal;
-    font-display: swap;
-    src: url("{{ '/assets/fonts/SourceSans3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
-  }
-
-  @font-face {
-    font-family: "Source Sans 3";
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-    src: url("{{ '/assets/fonts/SourceSans3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
+    src: url("{{ '/assets/fonts/NotoSans-normal-latin.woff2' | htmlBaseUrl }}") format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, 
+      U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, 
+      U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 </style>
