To versjoner av sykepenger

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no" class="h-full antialiased text-gray-900 bg-white font-[375] font-sans motion-safe:scroll-smooth scroll-pt-20">
+<html lang="no" class="h-full antialiased bg-white font-[375] font-sans motion-safe:scroll-smooth scroll-pt-20">
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
