--- a/src/_includes/partials/minSide.njk
+++ b/src/_includes/partials/minSide.njk
@@ -1,6 +1,6 @@
 {# Notifications #}
 <div class="absolute inset-x-0 z-40 grid w-full h-0 grid-cols-left-1 lg:grid-cols-left-2 top-full " x-bind:class="notifyOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
-  <div class="sm:max-w-xl w-full bg-white rounded-b-lg shadow-lg border border-slate-200 md:max-h-[92vh] col-full sm:col-wide sm:justify-self-end">
+  <div class="sm:max-w-xl w-full bg-white rounded-b-lg shadow-lg md:max-h-[92vh] col-full sm:col-wide sm:justify-self-end">
     <p class="grid pt-5 pb-4 border-b mx-edge sm:mx-6 border-slate-200" x-on:click="newNotifications = !newNotifications">
       <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
       <span class="text-xl font-semibold">Isac Norland</span>
