--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -8,7 +8,7 @@ noJS: true
 {% macro link(item) %}
   <div class="relative grid gap-1 py-6 pl-6 pr-8 text-lg rounded bg-slate-100 overflow-clip has-[a:hover]:bg-blue-500 transition-colors duration-150 has-[a:hover]:text-white">
     <a class="font-semibold text-blue-600 after:absolute hover:text-white after:z-10 after:inset-0" href="{{ item.url }}">
-      {{ item.data.title }}
+      {{ item.data.title }} {{ item.variant }}
       {% if item.data.variant %}       
       <span class="italic font-normal">({{ item.data.variant }})</span>
       {% endif %}
@@ -32,7 +32,7 @@ noJS: true
     <div class="grid items-start w-full max-w-screen-md gap-2 mx-auto rounded-xl overflow-clip">
       {% for item in pages %}
         {% for item in collections.all | onlyTags('produkt', item) %}
-          {{ link(item) }}        
+          {{ link(item) }}
         {% endfor %}
       {% endfor %}
     </div>
