--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,4 +1,4 @@
-<aside aria-label="Bare en prototype" class="grid pt-6 pb-8 text-lg leading-snug text-black bg-orange-300 border-t-8 border-warning px-edge">
+<aside aria-label="Bare en prototype" class="relative z-50 grid pt-6 pb-8 text-lg leading-snug text-black bg-orange-300 border-t-8 border-warning px-edge">
   <div class="flex items-start gap-4 md:gap-5 md:items-center col-wide">
     <div class="grid w-16 h-16 -mb-px bg-orange-900 rounded-full shrink-0 place-items-center">
       {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-8 h-8 mb-1 text-orange-200') | safe }}
